[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kritor-py"
version = "0.0.1"
description = "Chatbot Application Interface Standards."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = ["grpcio"]

[project.optional-dependencies]
dev = ["black==23.3.0", "pylint==2.8.2"]

[project.urls]
"Homepage" = "https://github.com/jstzwj/kritor-py"
"Bug Tracker" = "https://github.com/jstzwj/kritor-py/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]